<resources>
    <string name="app_name">HCA</string>
    <string name="main_promote_recruit">Promote/Recruit</string>
    <string name="main_openboard">OpenBoard</string>
    <string name="main_make_club">Make Club</string>
    <string name="main_myclub">My Club</string>
    <string name="main_search_club">Search Club</string>
    <string name="main_board_preview">Board Preview</string>
    <string name="text_id">Id</string>
    <string name="text_pw">Password</string>
    <string name="text_phone">Phone</string>
    <string name="text_student_id">Student Id</string>
    <string name="text_name">Name</string>
    <string name="text_mail">E-mail</string>
    <string name="text_nickname">Nickname</string>
    <string name="text_check_availablility">Check Availability</string>
    <string name="text_check_pw">Check Password</string>
    <string name="text_next">Next</string>
    <string name="text_previous">Previous</string>
    <string name="text_submit">Submit</string>
    <string name="text_manage">Manage</string>
    <string name="text_write">Write</string>
    <string name="text_signin">Sign In</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_search_idpw">Search ID/PW</string>
    <string name="error_empty">Please enter %s</string>
    <string name="text_club_name">Club Name</string>
    <string name="text_description">Description</string>
    <string name="error_exists">Same %s is already exists</string>
    <string name="text_join_request">Request Join</string>
    <string name="text_already_request">Processing Request</string>
    <string name="text_load_post">Loading Post...</string>
    <string name="text_send_request">Sending Request...</string>
    <string name="error_post_not_found">Can\'t find this post</string>
    <string name="error_no_permission_read_post">Don\'t have permission to read this post</string>
    <string name="text_club_board">Club Board</string>
    <string name="text_empty_board">Board is empty</string>
    <string name="error_no_permission_read_board">Don\'t have permission to read this board</string>
    <string name="text_delegate">Delegate Leader</string>
    <string name="text_appoint">Appoint Manager</string>
    <string name="text_kick">Kick from Club</string>
    <string name="text_disappoint">Disappoint Manager</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_input_confirm">Enter \'%s\' to continue the operation</string>
    <string name="text_master">Master</string>
    <string name="text_manager">Manager</string>
    <string name="text_member">Member</string>
    <string name="text_modify_club">Edit Club Info</string>
    <string name="text_modify">Edit Info</string>
    <string name="text_manage_request">Manage Request</string>
    <string name="text_manage_member">Manage Member</string>
    <string name="text_submit_post">Submit</string>
    <string name="text_post_title">Post Title</string>
    <string name="text_post_content">Post Content</string>
    <string name="error_post_no_title">Please enter title</string>
    <string name="text_post_modify">Edit Post</string>
    <string name="text_post_delete">Delete Post</string>
    <string name="text_delete_account">Delete Account</string>
    <string name="text_logout">Sign out</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="error_password_length">Password must be 6 characters or more</string>
    <string name="error_password_check">Please check your Password</string>
    <string name="error_pattern_mismatch">%s pattern is wrong</string>
    <string name="text_ok">Ok</string>
    <string name="error_delete_account_master">You can\'t delete account before delegate club leader</string>
    <string name="error_delete_account">Delete Account Failed</string>
    <string name="text_at_least_six">6 characters or more</string>
    <string name="text_no_post">Board is Empty</string>
    <string name="error_failed_send_email">Failed to send email</string>
    <string name="error_login_failed">Login failed, check your id and password</string>
    <string name="text_move_to_webmail">Link to Webmail</string>
    <string name="text_authenticate">Webmail Authenticate</string>
    <string name="text_send_mail">Send verify mail</string>
    <string name="text_verify">Verify</string>
    <string name="error_not_verify">Your mail is not verified yet</string>
    <string name="text_no_join_club">You are not joined any club</string>
    <string name="error_processing_request">Request is already processing</string>
    <string name="error_not_activated">This club is not activated yet</string>
    <string name="error_send_request">Request is failed</string>
</resources>